@@ -1438,6 +1438,8 @@ changes in sbcl-0.7.11 relative to sbcl-0.7.10:
     Valtteri Vuorikoski)
   * the compiler is now able to inline functions that were defined in
     a complex lexical environment (e.g. inside a MACROLET).
+  * fixed bug in DESCRIBE, which now works on rank-0 arrays.  (thanks
+    to Lutz Euler)
   * fixed some more bugs revealed by Paul Dietz' test suite:
     ** As required by ANSI, LOOP now disallows anonymous collection
        clauses such as COLLECT I in conjunction with aggregate boolean
